--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "mysql": "^2.12.0",
     "node-mocks-http": "^1.6.1",
     "nodemon": "^2.0.7",
-    "request": "^2.34.0"
+    "request": "^2.34.0",
+    "underscore": "^1.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jsdoc": "^3.5.3",
-    "mocha": "^2.4.5"
+    "mocha": "^8.3.1"
   }
 }
